# mcp-aas

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  E2E-TESTS.md  LICENSE  README.md  cucumber-report.html  cucumber.js  docker-compose.yml  package-lock.json  package.json  tsconfig.json
e2e/: README.md
mcp-tool-crawler-py/: .env.example  .gitignore  CLAUDE.md  README.md  SETUP_GITHUB.md  conftest.py  github_issues.md  pr_description.md  pyproject.toml  requirements.txt  sample-sources.csv  sample-sources.yaml  setup.cfg  setup.py
mcp-tool-crawler-py/.github/workflows/: python-ci.yml  upload-sources.yml
mcp-tool-crawler-py/infrastructure/step-functions/: mcp-tool-crawler.json
mcp-tool-crawler-py/scripts/: create_github_issues.py  package_lambda.sh
mcp-tool-crawler-py/src/: cli.py  main.py  models.py
mcp-tool-crawler-py/src/crawlers/: __init__.py  base.py  github_awesome_list.py
mcp-tool-crawler-py/src/lambda_functions/: crawler_generator.py  crawler_lambda.py  run_generated_crawler.py  s3_event_handler.py  source_initializer.py
mcp-tool-crawler-py/src/lambda_functions/lambda-package/: requirements.txt  source_initializer.py  sources.py
mcp-tool-crawler-py/src/services/: __init__.py  crawler_service.py  source_manager.py
mcp-tool-crawler-py/src/storage/: __init__.py  local_storage.py  s3_storage.py
mcp-tool-crawler-py/src/utils/: config.py  helpers.py  logging.py
mcp-tool-crawler-py/tests/: conftest.py
mcp-tool-crawler-py/tests/models/: test_models.py
mcp-tool-crawler-py/tests/unit/: test_crawler_generator.py  test_langgraph_workflow.py
(+73 files in other folders)
